--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
-    <link rel="stylesheet" href="../CSS/Todo.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <link rel="shortcut icon" href="https://cdn-icons-png.freepik.com/256/2043/2043239.png?ga=GA1.1.615184428.1706532498&semt=ais" type="image/x-icon">
 </head>
 
@@ -23,10 +23,10 @@
         </div>
     </div>
     <div class="footer" style="color: white;" >
-        <h4>Designed & Developed by <strong><a style="text-decoration: none; color: yellowgreen;" href="https://www.linkedin.com/in/arenaveenkumar/">ARE NAVEEN KUMAR</a></strong> </h4>
+        <h4>Designed & Developed by <strong><a style="text-decoration: none; color: yellowgreen;" href="https://www.linkedin.com/in/vennela-mekarthi/">VENNELA MEKARTHI</a></strong> </h4>
     </div>
 
-    <script src="../JAVA SCRIPT/Todo.js"></script>
+    <script src="../JAVA SCRIPT/toDo.js"></script>
 </body>
 
 </html>
